[tool.poetry]
name = "day-22"
version = "0.1.0"
description = ""
authors = ["Gabdullin_Alex <alexrexp@gmail.com>"]
readme = "README.md"
packages = [{include = "day_22"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
